{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 3698,
  "lineage": "62503586-1fcc-7e82-465c-fe9312193298",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:981056438894:instance/i-0381c72fd0538d694",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0381c72fd0538d694",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "crm_keys_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa316471a88e4c77",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-54-91-129-49.compute-1.amazonaws.com",
            "public_ip": "54.91.129.49",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2274740a1d053cc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d1e1932c104d3c",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02acfc393323debcf"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.key",
            "module.instance_sg.aws_security_group.bastion",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:981056438894:instance/i-07929091cf8465793",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07929091cf8465793",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "crm_keys_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029f440b9053c6722",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-54-226-180-96.compute-1.amazonaws.com",
            "public_ip": "54.226.180.96",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0acec45e562735b16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d1e1932c104d3c",
            "tags": {
              "Name": "mongo-db"
            },
            "tags_all": {
              "Name": "mongo-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aef342dd15891b45"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.key",
            "module.instance_sg.aws_security_group.sg_databases_instances",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "neo4j_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:981056438894:instance/i-04dfefd5d97e73941",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04dfefd5d97e73941",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "crm_keys_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d69d35b80fe4de0",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-54-91-94-123.compute-1.amazonaws.com",
            "public_ip": "54.91.94.123",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e39e4d88dbab5239",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d1e1932c104d3c",
            "tags": {
              "Name": "neo4j-db"
            },
            "tags_all": {
              "Name": "neo4j-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0960705bbd5c113e7"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.key",
            "module.instance_sg.aws_security_group.sg_databases_instances",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:981056438894:instance/i-03e6806b3dc7d9359",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e6806b3dc7d9359",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "crm_keys_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00470234339fab40e",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-54-221-62-47.compute-1.amazonaws.com",
            "public_ip": "54.221.62.47",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bde29a5e9bedbda8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d1e1932c104d3c",
            "tags": {
              "Name": "redis-db"
            },
            "tags_all": {
              "Name": "redis-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017ad865e6fbaa204"
            ]
          },
          "dependencies": [
            "data.aws_key_pair.key",
            "module.instance_sg.aws_security_group.sg_databases_instances",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-02acfc393323debcf",
            "description": "Allow SSH external IP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02acfc393323debcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_bastion_host",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_bastion_host"
            },
            "tags_all": {
              "Name": "sg_bastion_host"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_databases_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cassandra",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-06217a9121487f60d",
            "description": "Allow Bastion to access databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06217a9121487f60d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra Port",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9042
              }
            ],
            "name": "sg_cassandra",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_cassandra"
            },
            "tags_all": {
              "Name": "sg_cassandra"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": "kafka",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-0103396fdc27e5262",
            "description": "Allow Bastion to access databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0103396fdc27e5262",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Port 10091",
                "from_port": 10091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10091
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Port 10094",
                "from_port": 10094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10094
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_kafka",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_kafka"
            },
            "tags_all": {
              "Name": "sg_kafka"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": "mongo",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-0aef342dd15891b45",
            "description": "Allow Bastion to access databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aef342dd15891b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB Port",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_mongo",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_mongo"
            },
            "tags_all": {
              "Name": "sg_mongo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": "neo4j",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-0960705bbd5c113e7",
            "description": "Allow Bastion to access databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0960705bbd5c113e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Neo4j Port",
                "from_port": 7474,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7474
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Neo4j Port",
                "from_port": 7687,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7687
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_neo4j",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_neo4j"
            },
            "tags_all": {
              "Name": "sg_neo4j"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:security-group/sg-017ad865e6fbaa204",
            "description": "Allow Bastion to access databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017ad865e6fbaa204",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Port",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_redis",
            "name_prefix": "",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_redis"
            },
            "tags_all": {
              "Name": "sg_redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb52427e1dfe6081",
            "arn": "arn:aws:ec2:us-east-1:981056438894:elastic-ip/eipalloc-0fb52427e1dfe6081",
            "domain": "vpc",
            "id": "eipalloc-0fb52427e1dfe6081",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-172-179-194.compute-1.amazonaws.com",
            "public_ip": "54.172.179.194",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b5919a89f19b83",
            "arn": "arn:aws:ec2:us-east-1:981056438894:elastic-ip/eipalloc-0c6b5919a89f19b83",
            "domain": "vpc",
            "id": "eipalloc-0c6b5919a89f19b83",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-204-92-21.compute-1.amazonaws.com",
            "public_ip": "54.204.92.21",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:internet-gateway/igw-07784d1f1d73e2c48",
            "id": "igw-07784d1f1d73e2c48",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb52427e1dfe6081",
            "association_id": "eipassoc-0a4e25ffb74b1f802",
            "connectivity_type": "public",
            "id": "nat-09bd75b986fb71fe5",
            "network_interface_id": "eni-0d4e8154c94f2541f",
            "private_ip": "10.0.1.243",
            "public_ip": "54.172.179.194",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c4d1e1932c104d3c",
            "tags": {
              "Name": "nat-us-east-1a"
            },
            "tags_all": {
              "Name": "nat-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_crm.aws_eip.nat",
            "module.vpc_crm.aws_internet_gateway.igw",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b5919a89f19b83",
            "association_id": "eipassoc-0ef246fc3c8c6bba7",
            "connectivity_type": "public",
            "id": "nat-0ddc949fdd60db4df",
            "network_interface_id": "eni-0bc254fc1040f6333",
            "private_ip": "10.0.2.92",
            "public_ip": "54.204.92.21",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2bfbb1115486d45",
            "tags": {
              "Name": "nat-us-east-1b"
            },
            "tags_all": {
              "Name": "nat-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc_crm.aws_eip.nat",
            "module.vpc_crm.aws_internet_gateway.igw",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0baf6899b1428a4251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09bd75b986fb71fe5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0baf6899b1428a425",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_eip.nat",
            "module.vpc_crm.aws_internet_gateway.igw",
            "module.vpc_crm.aws_nat_gateway.natgw",
            "module.vpc_crm.aws_route_table.private",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ec3b7a3f427d516a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ddc949fdd60db4df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec3b7a3f427d516a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_eip.nat",
            "module.vpc_crm.aws_internet_gateway.igw",
            "module.vpc_crm.aws_nat_gateway.natgw",
            "module.vpc_crm.aws_route_table.private",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07784d1f1d73e2c48",
            "id": "r-rtb-07242b327df12c5de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07242b327df12c5de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_internet_gateway.igw",
            "module.vpc_crm.aws_route_table.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:route-table/rtb-0baf6899b1428a425",
            "id": "rtb-0baf6899b1428a425",
            "owner_id": "981056438894",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "private-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:route-table/rtb-0ec3b7a3f427d516a",
            "id": "rtb-0ec3b7a3f427d516a",
            "owner_id": "981056438894",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "private-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:route-table/rtb-07242b327df12c5de",
            "id": "rtb-07242b327df12c5de",
            "owner_id": "981056438894",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071144d34734ef20d",
            "region": "us-east-1",
            "route_table_id": "rtb-0baf6899b1428a425",
            "subnet_id": "subnet-020ce85f509c122ec"
          },
          "dependencies": [
            "module.vpc_crm.aws_route_table.private",
            "module.vpc_crm.aws_subnet.private",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1092a6db3675145",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec3b7a3f427d516a",
            "subnet_id": "subnet-061a9dc953cc96c35"
          },
          "dependencies": [
            "module.vpc_crm.aws_route_table.private",
            "module.vpc_crm.aws_subnet.private",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c859bc616173b88d",
            "region": "us-east-1",
            "route_table_id": "rtb-07242b327df12c5de",
            "subnet_id": "subnet-0c4d1e1932c104d3c"
          },
          "dependencies": [
            "module.vpc_crm.aws_route_table.public",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092829d3fbefb99cc",
            "region": "us-east-1",
            "route_table_id": "rtb-07242b327df12c5de",
            "subnet_id": "subnet-0e2bfbb1115486d45"
          },
          "dependencies": [
            "module.vpc_crm.aws_route_table.public",
            "module.vpc_crm.aws_subnet.public",
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:subnet/subnet-020ce85f509c122ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020ce85f509c122ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981056438894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1a"
            },
            "tags_all": {
              "Name": "private-us-east-1a"
            },
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:subnet/subnet-061a9dc953cc96c35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061a9dc953cc96c35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981056438894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "private-us-east-1b"
            },
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:subnet/subnet-0c4d1e1932c104d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4d1e1932c104d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981056438894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:subnet/subnet-0e2bfbb1115486d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2bfbb1115486d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981056438894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-06abee9d211e0665c"
          },
          "dependencies": [
            "module.vpc_crm.aws_vpc.vpc_crm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_crm",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_crm",
      "provider": "module.vpc_crm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981056438894:vpc/vpc-06abee9d211e0665c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5ae0bd809eede70",
            "default_route_table_id": "rtb-016d51eaea9a9e8f8",
            "default_security_group_id": "sg-02407cd57bdf0e8a1",
            "dhcp_options_id": "dopt-02bbc2f7dc83e6c38",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06abee9d211e0665c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016d51eaea9a9e8f8",
            "owner_id": "981056438894",
            "region": "us-east-1",
            "tags": {
              "Name": "multi-az-vpc"
            },
            "tags_all": {
              "Name": "multi-az-vpc"
            }
          }
        }
      ]
    }
  ]
}